# axon_task

./: .env.template  .env.testing  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.base.yaml  docker-compose.otel.yaml  docker-compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: workflows.yml
axon/: requirements.txt
axon/app/: main.py
axon/app/api/: product.py  routers.py  task.py
axon/app/db/: db.py
axon/app/filter/: tasks.py
axon/app/migrations/: env.py
axon/app/migrations/versions/: 634e75b51aa8_create_tables.py
axon/app/models/: products.py  tasks.py
axon/app/schemas/: aggregate.py  products.py  tasks.py
axon/app/services/: products.py  tasks.py
axon/app/utils/: exception.py
axon/tests/: data.py  test_async.py
config/collector/: config.yaml
config/grafana/provisioning/dashboards/: exported_dashboard.json
config/grafana/provisioning/datasources/: datasource.yaml
config/prometheus/: prometheus.yml
src/: alembic.ini
src/aggregate/application/dto/: __init__.py  items.py  tasks.py
src/aggregate/domain/entity/: __init__.py  cubes.py  items.py  products.py  tasks.py
src/aggregate/domain/exceptions/: __init__.py  base.py
src/aggregate/infra/: __init__.py  filter.py
src/aggregate/infra/repository/: __init__.py  base.py  cubes.py  items.py  products.py  tasks.py
src/aggregate/presentation/dto/: __init__.py  request.py  response.py
src/aggregate/presentation/exceptions/: __init__.py  exceptions.py
src/aggregate/presentation/rest/: cubes.py  products.py  tasks.py
src/shared_kernel/infra/: container.py
src/shared_kernel/infra/db/: data_mappers.py  db.py  orm.py
src/shared_kernel/infra/fastapi/: config.py  logger.py  main.py  meter.py  routers.py  scheduler.py
src/shared_kernel/infra/uow/: base.py  sqlalchemy.py
src/tests/functional/: conftest.py  data.py  test_cube.py  test_product.py  test_task.py
src/tests/integration/repository/: conftest.py  test_cube.py  test_product.py  test_task.py
src/tests/unit/: conftest.py  test_all_task.py  test_cube.py  test_products.py
src/tests/unit/fake/: __init__.py  fake_base_orm.py  fake_cube_repository.py  fake_product_repository.py  fake_task_repository.py  fake_uow.py
src/tests/utils/: make.py
(+17 files in other folders)
